<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Perusal</string>
    <string name="title_section1">Peruse</string>
    <string name="title_section2">Recent</string>
    <string name="title_section3">Text Recognition</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Hint for the scree nthat lets the user type or paste text to spritz -->
    <string name="hint_peruse_edit_text">Paste Text Here! You can also share Web Pages containing the text you want to read with the \'Perusal\' App!</string>

    <!-- Spritz action -->
    <string name="action_spritz_selection">Spritz This!</string>
    <string name="action_spritz_custom_settings">Settings</string>

    <!-- In Spritz Fragment, action menu contains a text to speech button -->
    <string name="action_text_to_speech">Text to Speech</string>

    <!-- common strings -->
    <string name="action_item_edit">Edit</string>
    <string name="action_item_delete">Delete</string>

    <!--Recent perusals -->
    <string name="action_recent_perusal_rename_title">Rename</string>
    <string name="action_recent_perusal_share">Share</string>
    <string name="action_recent_perusal_remove">Delete</string>
    <string name="share_intent">Share with&#8230;</string>

    <string name="showcase_main_title">Showcase Sample</string>
    <string name="showcase_main_message">Press the button showcased to change the showcase\'s style</string>
    <string name="button_hide">Change style</string>
    <string name="button_show">Show</string>

    <string name="action_delete_all_recent_perusals">Delete All Perusals</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="about_app_name">Peruse with Spritz</string>
    <string name="about_app_name_and_version">Peruse with Spritz, v0.3.2</string>
    <string name="about_body">
    <![CDATA[ Peruse with Spritz was built with a passion for making reading more efficient and faster! The text that you want to read is streamed to you using the Spritz RSVP algorithm. If you would like more information
  	follow these links:
    <br><br>
        <b>&bull;&nbsp;&nbsp;<a href="https://github.com/oulrich1/PeruseWithSpritz">Github repository</a></b>
        <i>Source code of the project</i>
    <br>
        <b>&bull;&nbsp;&nbsp;<a href="http://www.spritzinc.com/where-can-i-experience-spritz/">Spritz Website</a></b>
        <i>Where you can experience all of Spritz</i>
        <b>
    <br><br>
        Libraries and Resources used:
    <br>
        <b>&bull;&nbsp;&nbsp;<a href="https://github.com/amlcurran/ShowcaseView/">Android-ShowcaseView</a></b>
    <br>
        <b>&bull;&nbsp;&nbsp;<a href="https://johnkil.github.io/Android-RobotoTextView/">Android-RobotoTextView</a></b>
    <br>
        <b>&bull;&nbsp;&nbsp;Android</b>
    <br>
        <b>&bull;&nbsp;&nbsp;Spritz API</b>
    <br>
        <b>&bull;&nbsp;&nbsp;
            <a href="http://opencv.org/platforms/android.html">OpenCV</a>
            &nbsp;&amp;&nbsp;
            <a href="https://code.google.com/p/tesseract-ocr/">Tesseract</a>
        </b>
    ]]>
    </string>
    <string name="about_dismiss">Dismiss</string>

    <!--Epub Related Strings - Shared Prefs -->
    <string name="preference_page_size_default">25</string>
    <string name="preference_fontsize">24</string>
    <string name="preference_css_selector">p, div, span</string>

    <!-- Text To Speech Strings - for shared pref keys -->
    <string name="pref_tts_pitch_default">1.0</string>
    <string name="pref_tts_speech_rate_default">1.0</string>
    <string name="pref_spritz_focus_sweeping_animation_default">Disable</string>

    <!--Spritz Related Strings - Shared Prefs -->
    <string name="pref_spritz_default_chunk_size">50</string>
    <string name="preference_spritz_reticle_line_color">BLACK</string>
    <string name="pref_spritz_default_word_color">BLACK</string>
    <string name="pref_spritz_default_highlight_color">RED</string>
    <string name="pref_select_spritz_color_reticle">Reticle Line Color</string>
    <string-array name="colors">
        <item>WHITE</item>
        <item>BLACK</item>
        <item>GRAY</item>
        <item>RED</item>
        <item>GREEN</item>
        <item>BLUE</item>
        <item>MAGENTA</item>
        <item>YELLOW</item>
        <item>CYAN</item>
    </string-array>

    <string-array name="_boolean_str_">
        <item>False</item>
        <item>True</item>
    </string-array>
    <string-array name="_boolean_enable_disable_">
        <item>Disable</item>
        <item>Enable</item>
    </string-array>
    <integer-array name="_boolean_">
        <item>0</item>
        <item>1</item>
    </integer-array>

    <!-- Ads -->
    <!-- (1) test ad -->
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
</resources>
