<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Spritz Settings">

        <EditTextPreference
            android:defaultValue="@string/pref_spritz_default_chunk_size"
            android:key="pref_spritz_chunk_size"
            android:title="Words Per Spritz Chunk"
            android:textSize="24dp"
            android:summary="Set the number of words in each text partition, larger means less cognitive breaks"
            android:inputType="number"
            android:dialogTitle="Spritz Chunk Size"
            />

        <!--<EditTextPreference-->
            <!--android:defaultValue="@string/preference_css_selector"-->
            <!--android:key="preference_epub_reader_css_selector"-->
            <!--android:title="CSS Selector"-->
            <!--android:textSize="24dp"-->
            <!--android:summary="elimited by commas (ie: 'p, div, span')"-->
            <!--android:inputType="text"-->
            <!--android:dialogTitle="CSS Selector"-->
            <!--/>-->

        <ListPreference
            android:key="pref_spritz_reticle_color"
            android:title="@string/pref_select_spritz_color_reticle"
            android:entries="@array/colors"
            android:summary="Color of the box around the current Spritzed word"
            android:entryValues="@array/colors" />

        <ListPreference
            android:key="pref_spritz_text_highlight_color"
            android:title="Spritz Text Highlight Color"
            android:entries="@array/colors"
            android:summary="Color of the letter centered by Reticle"
            android:entryValues="@array/colors" />

        <ListPreference
            android:key="pref_spritz_word_color"
            android:title="Spritz Word Color"
            android:entries="@array/colors"
            android:summary="Color of the word not centered by Reticle"
            android:entryValues="@array/colors" />

        <!--<MultiSelectListPreference-->
            <!--android:dialogTitle="@string/preference_spritz_reticle_line_colors_dialog_title"-->
            <!--android:key="mode_repeat"-->
            <!--android:summary=""-->
            <!--android:title="@string/preference_spritz_reticle_line_colors_dialog_title"-->
            <!--android:entries="@array/colors"-->
            <!--android:entryValues="@array/colors"-->
            <!--android:defaultValue="@string/preference_spritz_reticle_line_color" />-->

        <!--<Preference android:title="@string/pref_select_spritz_color_reticle"-->
            <!--android:key="pref_color"/>-->
            <!--<hotchemi.stringpicker.StringPicker-->
                <!--android:id="@+id/string_picker"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Text to Speech Settings">

        <EditTextPreference
            android:defaultValue="@string/pref_tts_pitch_default"
            android:key="pref_tts_pitch"
            android:title="Voice Pitch Multiplier"
            android:textSize="24dp"
            android:summary="Normal is '1.0'. Larger number is Higher Pitched"
            android:inputType="numberDecimal"
            android:dialogTitle="Voice Pitch Multiplier"
            />

        <EditTextPreference
            android:defaultValue="@string/pref_tts_pitch_default"
            android:key="pref_tts_speech_rate"
            android:title="Voice Speech Rate Multiplier"
            android:textSize="24dp"
            android:summary="Normal is '1.0'. Larger number is Faster"
            android:inputType="numberDecimal"
            android:dialogTitle="Voice Speech Rate Multiplier"
            />

    </PreferenceCategory>
</PreferenceScreen>